--- a/gallery/src/main/res/layout/banner_view_layout.xml
+++ b/gallery/src/main/res/layout/banner_view_layout.xml
@@ -7,7 +7,7 @@
     android:clipChildren="false">
 
     <!--viewpager-->
-    <android.support.v4.view.ViewPager
+    <androidx.viewpager.widget.ViewPager
         android:id="@+id/viewPager"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
